--- a/latex/sections/discussion.tex
+++ b/latex/sections/discussion.tex
@@ -1,5 +1,13 @@
 \textbf{Future ideas:}
 \begin{itemize}
+    \item Errors
+    \item Errors from the interpolation, the more points we sample the smaller the error??
+    \item Filters: chauvenet's, rv cut, z-score cut
+\end{itemize}
+
+
+\textbf{Future ideas:}
+\begin{itemize}
     \item Auto encoder
     \item Lunch LFC into orbit around earth to have a base truth
     \item Better understand the stellar activities
